# cellpy

./: .aliases  .dockerignore  .env_example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .travis.yml  AGENTS.md  AUTHORS.md  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DEPRECATIONS.md  HISTORY.md  HISTORY.rst  JUPYTER_ZMQ_FIX.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  README_old.md  action_log.rst  appveyor.yml  build.sh  bumpver.toml  cellpy_batch_test.json  conda_install.sh  conda_install_dev.sh  dev_environment.yml  environment.yml  environment_dev.yml  frozen_requirement.txt  github_actions_environment.yml  meta.yaml  notes.md  (+21 more)
.cursor/commands/: build.md  create-original-issue-file.md  iflow.md  issue-cleanup.md  issue-close.md  issue-init.md  issue-pause.md  issue-plan.md  issue-start.md  issue-yolo.md
.cursor/rules/: cellpy-core-migration.mdc  cellpy-workspace.mdc  graphify.mdc  issueflow-rules.mdc  kiss.mdc  this-project.mdc
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom-issue.md
.github/workflows/: benchmarks.yml  check_conda_forge.yml  ci-scheduled.yml  ci.yml  dependabot-auto-merge.yml  docs.yml  draft-pdf.yml  pip-install-macos-14.yml  pip-install-macos.yml  pip-install-posix.yml  pip-install-win.yml  pytest_macos.yml  pytest_macos_14.yml  pytest_posix.yml  pytest_win.yml  release.yml  test-win.yml
.issueflows/00-tools/: README.md  migrate_prms_calls.py  scan_hardcoded_headers.py  scan_member_usage.py
.issueflows/01-current-issues/: issue356_original.md  issue356_plan.md  issue360_status.md  issue375_original.md  issue377_status.md  (+32 more)
01-current-issues/: issue307_original.md  issue307_status.md  issue345_original.md  issue345_status.md  issue350_neware_loading_overview.md  issue350_original.md  issue350_recipe_new_neware_txt_reader.md  issue350_status.md
03-solved-issues/: issue345_status.md
_old_docs/: adapted_readme.md  adapted_readme.rst  index.md
benchmarks/: README.md  __init__.py  check_baseline.py  conftest.py  paths.py  test_performance.py
cellpy/: .gitignore  AUTHORS.rst  LICENSE  README.rst  __init__.py  _deprecation.py  _version.py  cellpy_setup.py  cli.py  cli_api.py  errors.py  exceptions.py  ica.py  log.py  logging.ini  logging.json  setup.py  tox.ini  units.py
dev/: plot_preview_common.py  preview_curve_plots.py  preview_ica_plots.py  preview_plots.py  preview_summary_plots.py  regenerate_goldens.py  render_example_notebooks.py  snapshot_cli_surface.py  snapshot_figure_specs.py
dev_data/: README.txt
dev_utils/: .cellpy_prms_dev.conf  BioLogic.py  Checkin_ica_for_fullcells.ipynb  Developing batch methods.ipynb  batch_processing.ipynb  batch_processing_DEV_SummaryPlot.ipynb  batch_processing_SummaryPlot.ipynb  biologic_file_format.py  cellpy_GITT.ipynb  cellpy_batch_processing_DEV.ipynb  cellpy_check_hdf5_queries.ipynb  cellpy_dev_strange_files.ipynb  cellpy_dqdv_on_dfdata.ipynb  cellpy_example_ica_interactiver_session.ipynb  cellpy_file_check.ipynb  cellpy_file_format.ipynb  cellpy_ideas_and_tweaks.ipynb  cellpy_lookup.ipynb  cellpy_lookup_batch_analyser_example.ipynb  cellpy_lookup_batch_plan.ipynb  cellpy_lookup_batch_plan_v2.ipynb  cellpy_ocv.ipynb  cellpy_pec_tweaking.ipynb  cellpy_update_hdf5_test_files.ipynb  check_memory.py  convert_from_dict_to_dataclass.py  dev_testutils.py  environment.yml  file_format_checker.py  find_bugs_notebook.ipynb  fitting_dev.ipynb  fitting_dev_not_inheretance.ipynb  make_example_custom_file_configfile.py  parsing_binary.py  performance.py  plotting_options.ipynb  plotting_raw_data.ipynb  plotting_tests_dqdv.ipynb  plotting_tests_dqdv_ica_frames_method.ipynb  profiling_cellpy.py  (+10 more)
docker/: Dockerfile.build-test
docs/: Makefile  adapted_readme.md  adapted_readme.rst  basics.rst  conf.py  cursor-issue-workflow.md  developers.rst  developers_cellpy_structure.rst  developers_guide.rst  environment_rtd.yml  examples.rst  formats.rst  index.md  index.rst  installation.rst  issue-workflow.md  make.bat  notebooks.rst  readme.rst  requirements_doc.txt  tips_and_tricks.rst  tut_ocv_rlx.rst  tutorial.rst  usage.rst
examples/: 01_loading_data.ipynb  02_Initial_data_inspection.ipynb  03_capacity_vs_voltage.ipynb  04_incremental_capacity_analysis.ipynb  05_GITT.ipynb  06_loading_different_formats.ipynb  07_custom_loaders.ipynb  08_batmo_bdf.ipynb  09_loading_pec_data.ipynb  Initial_data_inspection.ipynb  Multisetreader.py  SimpleBatchTemplate.ipynb  batchplot.py  batchplot_old.py  capacity_vs_voltage.ipynb  cellpy_batch_processing.ipynb  incremental_capacity_analysis.ipynb  iterate_rawfiles.py  reading_cycle_data.py  simple_arbin_reader_no_cellpy.py  simple_reader.py  simple_reader_cellpy.py  trying_stuff.py
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
local/: notes.md
paper/: paper.bib  paper.md
recipe/: meta.yaml
scripts/: build_test.sh  dev_sync.sh
test/: examples.py  test_file.py  test_new_feature_branch.py
testdata/: .env_cellpy_test  _cellpy_prms_default.conf
tests/: README.md  __init__.py  cellpy_batch_test.json  cellpy_file_support.py  config_support.py  conftest.py  curve_golden_support.py  fdv.py  figure_spec_support.py  golden_support.py  ica_golden_support.py  instrument_configuration_module.py  loader_golden_support.py  manual_debug_neware_get.py  parity.py  parity_support.py  prms_support.py  pyproject.toml  test_arbin_sql_h5.py  test_arbin_sql_h5_two_stage.py  test_arbin_two_stage.py  test_arbin_variants_two_stage.py  test_aux_map.py  test_batch.py  test_batch2.py  test_batmo.py  test_biologics.py  test_biologics_two_stage.py  test_cell_frame_headers.py  test_cell_readers.py  test_cell_schema.py  test_cellpy.py  test_cellpy_cmd.py  test_cellpy_file_format.py  test_cellpy_file_roundtrip.py  test_cellpy_file_v9.py  test_cellpy_method_integrity.py  test_cellpy_splitting.py  test_cellpycell_add_to_summary.py  test_cellpycell_internals.py  (+90 more)
utils/: cell_ocv.py  ocv_relax.py  simulation.py
(+988 files in other folders)
