[build-system]
# This section defines the build system requirements
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--durations=0 --capture=fd -v -m \"not slowtest and not smoketest and not unimportant and not unfinished and not onlylocal\""
markers = [
    "slowtest: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
    "skip_on_macos: skip this test when running on macOS (e.g. CI flakiness)",
]
filterwarnings = [
    "ignore::DeprecationWarning:dateparser",
    "ignore::UserWarning:click",
    "ignore::FutureWarning:numpy",
    "ignore::UserWarning:uncertainties",
]

[tool.black]
line-length = 120

[tool.bumpver]
current_version = "1.0.3a7"
version_pattern = "MAJOR.MINOR.PATCH[PYTAG][NUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]


"cellpy/_version.py" = [
    '__version__ = "{version}"',
]
